--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "vue_jwt_frontend"]
 	path = vue_jwt_frontend
 	url = git@github.com:derrick921213/vue_jwt_frontend.git
+	branch = main
 [submodule "rust_jwt_backend"]
 	path = rust_jwt_backend
 	url = git@github.com:derrick921213/rust_jwt_backend.git
+	branch = main
